# go-kart-lang

./: .editorconfig  Cargo.toml  flake.nix
.github/workflows/: ci.yml
ast/src/: main.rs
bench/: bench.sh
cam/: Cargo.toml
cam/src/: main.rs
lib/gokart/: Cargo.toml
lib/gokart-ast/: Cargo.toml
lib/gokart-ast/src/: lib.rs
lib/gokart-cam/: Cargo.toml
lib/gokart-cam/src/: lib.rs  main.rs
lib/gokart-cli/: Cargo.toml
lib/gokart-cli/src/: main.rs
lib/gokart-cli/tasks/: task_02.gokart
lib/gokart-compile/: Cargo.toml
lib/gokart-compile/src/: compile.rs  ctx.rs  lib.rs  serialize.rs
lib/gokart-compiler/: Cargo.toml
lib/gokart-compiler/src/: lib.rs
lib/gokart-core/: Cargo.toml
lib/gokart-core/src/: ast.rs  code.rs  exp.rs  lib.rs  loc.rs  op_code.rs  predef.rs  prim_op.rs  serialize.rs  ty.rs  types.rs  value.rs
lib/gokart-decay/: Cargo.toml
lib/gokart-decay/src/: apply.rs  as_pat.rs  ctx.rs  decay.rs  err.rs  lib.rs  scope.rs  state.rs
lib/gokart-gc/: Cargo.toml  build.rs  gokart_gc.h
lib/gokart-gc/src/: heap.rs  lib.rs  marker.rs  (+4 more)
lib/gokart-jit/: Cargo.toml
lib/gokart-parse/: Cargo.toml
lib/gokart-parser/: Cargo.toml
lib/gokart-runtime/: Cargo.toml  build.rs  gokart_runtime.h
lib/gokart-serde/: Cargo.toml
lib/gokart-verify/: Cargo.toml
lib/gokart-vm/: Cargo.toml
lib/gokart/res/: task_1.gokart
lib/gokart/src/: main.rs  pipeline.rs
lib/gokartc/: Cargo.toml
lib/gokartc/src/: main.rs
tasks/: task_0.gokart  task_01.gokart  task_02.gokart  task_02_rnd.gokart  task_03.gokart  task_03_mut.gokart  task_04.gokart  test.gokart
(+38 files in other folders)
